@@ -1,4 +1,16 @@
-MD5 386bdf92a958ecbbe8d385998fdfce2e ChangeLog 444
-MD5 06b6d03e8bc301bf5dc52b64a001bd02 libgdamm-1.3.6.ebuild 728
-MD5 e1f2511030c19628dbfd68a7b1cd5c82 metadata.xml 162
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
+MD5 6a0db70b93f790a1045eae2a29e66dda ChangeLog 567
 MD5 97a1df4c52bdc963ce47b31f9de198de files/digest-libgdamm-1.3.6 67
+MD5 0188f5f98a67dccee7ff1ea348ccb594 files/digest-libgdamm-1.3.7 67
+MD5 06b6d03e8bc301bf5dc52b64a001bd02 libgdamm-1.3.6.ebuild 728
+MD5 60b9cdd5fa5db079dd7480c607a8bae5 libgdamm-1.3.7.ebuild 730
+MD5 e1f2511030c19628dbfd68a7b1cd5c82 metadata.xml 162
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v1.4.2 (GNU/Linux)
+
+iD8DBQFDWP3MEZCkKN40op4RAgvSAJwK7yHTlpT6ZT+0BK9sZetqJMW15QCggVgc
+bIHsz/gDfCq1Fwvu++NQAbI=
+=bZEL
+-----END PGP SIGNATURE-----
