@@ -1,0 +1,1 @@
+MD5 1aa0e35753ec87ec55822b2e59005892 libgdamm-1.3.7.tar.bz2 283205
