@@ -1,6 +1,11 @@
 # ChangeLog for dev-cpp/libgdamm
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-cpp/cvs-repo/gentoo-x86/dev-cpp/libgdamm/ChangeLog,v 1.2 2005/07/22 08:18:52 dholm Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-cpp/cvs-repo/gentoo-x86/dev-cpp/libgdamm/ChangeLog,v 1.3 2005/10/21 14:39:47 ka0ttic Exp $
+
+*libgdamm-1.3.7 (21 Oct 2005)
+
+  21 Oct 2005; Aaron Walker <ka0ttic@gentoo.org> +libgdamm-1.3.7.ebuild:
+  Version bump.
 
   22 Jul 2005; David Holm <dholm@gentoo.org> libgdamm-1.3.6.ebuild:
   Added to ~ppc.
